Fix autofill literal value bug and update tutorials

--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "id": "d2aedd2d-b1d5-4d2d-8e95-61ff06292438",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -96,7 +95,7 @@
     "import pandas as pd\n",
     "\n",
     "# Get your data\n",
-    "df = pd.read_csv(file.tsv, sep='\\t')\n",
+    "df = pd.read_csv(\"file.tsv\", sep='\\t')\n",
     "\n",
     "# Set up reviewer\n",
     "reviewer = MyCustomReviewer()\n",
@@ -111,7 +110,7 @@
    "id": "845e88af",
    "metadata": {},
    "source": [
-    "First, we will go through some basica terminology . Next, we will walk through each step below using basic functionality. In the last section, we will go through more advanced options for each step."
+    "First, we will go through some basic terminology. Next, we will walk through each step below using basic functionality. In the last section, we will go through more advanced options for each step."
    ]
   },
   {
@@ -119,15 +118,21 @@
    "id": "4ccbdf3d",
    "metadata": {},
    "source": [
-    "## Terminology\n",
+    "## General Terminology\n",
     "\n",
-    "Outline TBD\n",
-    "- ReviewData and Data\n",
-    "- App\n",
-    "    - components\n",
-    "    - layout components\n",
-    "    - annotation input panel\n",
-    "    - history panel\n"
+    "- A **Subject Type** refers to what \"level\" or \"item\" you are reviewing. For example, you may be reviewing samples (ie purity), participants (ie clinical data or comprehensive data), mutations (checking if it is an artifact), etc.\n",
+    "\n",
+    "- A **Subject** is an individual item you are currently reviewing or manually annotating.\n",
+    "\n",
+    "- A **Reviewer** is the class in the `JupyterReviewer` package that manages the data you want to review and implements a user interface for you to review each **Subject** one at a time, view/interact its corresponding data, and make annotations.\n",
+    "\n",
+    "- An **Annotation** is some value associated with a given **Review Subject** given some kind of analysis or manual observation. A Review Subject can have multiple annotations. An Annotation may have certain parameters about what kinds of values are allowed (a list of options, or a range of values, etc.)\n",
+    "\n",
+    "- **Data** in this context is actually an object that stores collection of tables. It includes the information to review for your Review Subject type (ie sample table from Terra), and the annotations you will eventally make for it. Its purpose is to \"freeze\" the data you are reviewing and couple the data with the annotations you make. Once this object is made, it will store all the data in a pickle file. From then on, only your annotations can be (easily) modified in a specific way (by the `ReviewData` class)\n",
+    "\n",
+    "- An **ReviewDataApp** is a user interface to display your Data, such as displaying charts or graphs of the information associated with your Review Subject Type, and a way to add annotations for the currently displayed Review Subject. In this package, we use `plotly.dash` to create dashboards for this purpose.\n",
+    "\n",
+    "![](https://github.com/getzlab/JupyterReviewer/blob/master/images/Reviewer%20Diagram.jpg)\n"
    ]
   },
   {
@@ -1194,7 +1199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1208,7 +1213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
