--- a/example_notebooks/Purity_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Purity_Reviewer_Tutorial.ipynb
@@ -439,6 +439,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "748613e8-8487-48ef-986e-959d31051bef",
+   "metadata": {},
+   "source": [
+    "# Download rdata to local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "57b1e373-82d6-4c00-8df2-2321564fa38a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import dalmatian\n",
+    "\n",
+    "def download_data(file_to_download_path, full_local_path):\n",
+    "    dalmatian.getblob(file_to_download_path).download_to_filename(full_local_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5020be98-a05c-4d74-a64e-e74642c61039",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdata_dir = f'/Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/local_rdata'\n",
+    "if not os.path.isdir(rdata_dir):\n",
+    "    os.mkdir(rdata_dir)\n",
+    "    \n",
+    "for pair_id, r in pcyc_wm_pairs_df.iterrows():\n",
+    "    absolute_rdata_gsurl = r['absolute_rdata']\n",
+    "    local_absolute_rdata_fn = f'{rdata_dir}/{pair_id}.absolute.rdata'\n",
+    "    download_data(absolute_rdata_gsurl, local_absolute_rdata_fn)\n",
+    "    pcyc_wm_pairs_df.loc[pair_id, 'local_absolute_rdata'] = local_absolute_rdata_fn\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "457ef49e-13ef-4322-9a4e-ae2c58a7f8f1",
    "metadata": {},
    "source": [
@@ -447,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "f7f05aa1",
    "metadata": {
     "tags": []
@@ -457,33 +498,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rdata tsv directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/rdata_to_tsv\n",
-      "cnp figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/cnp_figs\n",
+      "Converting ABSOLUTE rdata into tsv files in /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3/rdata_to_tsv\n",
       "Reloading cnp figs\n",
-      "mut figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/mut_figs\n",
       "Reloading mut figs\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewData.py:38: UserWarning:\n",
-      "\n",
-      "Loading existing data pkl file\n",
-      "\n"
      ]
     }
    ],
    "source": [
-    "review_data_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/review_data.2.pkl'\n",
+    "review_data_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial/review_data.7.pkl'\n",
     "\n",
     "matched_reviewer = MatchedPurityReviewer()\n",
     "matched_reviewer.set_review_data(data_pkl_fn = review_data_fn, \n",
     "                                 description='testing matched purity reviewer', \n",
     "                                 df=pcyc_wm_pairs_df, # optional if directory above already exists. \n",
     "                                 index=pcyc_wm_pairs_df.index,\n",
-    "                                 preprocess_data_dir= '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial',\n",
+    "                                 preprocess_data_dir= '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3',\n",
     "                                 acs_col='alleliccapseg_tsv', \n",
     "                                 maf_col='mutation_validator_validated_maf',\n",
     "                                 rdata_fn_col='local_absolute_rdata',\n",
@@ -500,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "e326100d-5333-45c4-9cbb-2f9ebf6c4412",
    "metadata": {},
    "outputs": [
@@ -518,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "e5673056-8549-46fe-93dc-e9057bc74aa2",
    "metadata": {},
    "outputs": [
@@ -559,10 +588,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair</th>\n",
-       "      <td>0.92</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Absolute</td>\n",
-       "      <td>asdf</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RP-2080_PCYC_CH10_T_02_v2_Exome_OnPrem_pair</th>\n",
@@ -573,10 +602,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RP-2080_PCYC_CH18_T_01_v2_Exome_OnPrem_pair</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>nan</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>Absolute</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RP-2080_PCYC_CH18_T_02_v2_Exome_OnPrem_pair</th>\n",
@@ -599,14 +628,14 @@
       "text/plain": [
        "                                             Purity  Ploidy    Method Notes\n",
        "value                                                                      \n",
-       "RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair    0.92     2.0  Absolute  asdf\n",
+       "RP-2080_PCYC_CH10_T_01_v2_Exome_OnPrem_pair     NaN     NaN       nan   nan\n",
        "RP-2080_PCYC_CH10_T_02_v2_Exome_OnPrem_pair     NaN     NaN       nan   nan\n",
-       "RP-2080_PCYC_CH18_T_01_v2_Exome_OnPrem_pair     NaN     NaN       nan   nan\n",
+       "RP-2080_PCYC_CH18_T_01_v2_Exome_OnPrem_pair    0.87    2.05  Absolute      \n",
        "RP-2080_PCYC_CH18_T_02_v2_Exome_OnPrem_pair     NaN     NaN       nan   nan\n",
        "RP-2080_PCYC_CH1_T_01_v2_Exome_OnPrem_pair      NaN     NaN       nan   nan"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
