--- a/example_notebooks/Purity_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Purity_Reviewer_Tutorial.ipynb
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cded4f95",
    "metadata": {},
    "outputs": [],
    "source": [
     "from JupyterReviewer.Reviewers.MatchedPurityReviewer import MatchedPurityReviewer\n",
     "\n",
-    "from JupyterReviewer.ReviewData import DataAnnotation\n",
+    "from JupyterReviewer.ReviewDataInterface import DataAnnotation\n",
     "from JupyterReviewer.ReviewDataApp import AppComponent\n",
     "\n",
     "import dalmatian\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "12d8db00",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "57b1e373-82d6-4c00-8df2-2321564fa38a",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "5020be98-a05c-4d74-a64e-e74642c61039",
    "metadata": {},
    "outputs": [],
@@ -473,7 +473,8 @@
     "for pair_id, r in pcyc_wm_pairs_df.iterrows():\n",
     "    absolute_rdata_gsurl = r['absolute_rdata']\n",
     "    local_absolute_rdata_fn = f'{rdata_dir}/{pair_id}.absolute.rdata'\n",
-    "    download_data(absolute_rdata_gsurl, local_absolute_rdata_fn)\n",
+    "    if not os.path.exists(local_absolute_rdata_fn):\n",
+    "        download_data(absolute_rdata_gsurl, local_absolute_rdata_fn)\n",
     "    pcyc_wm_pairs_df.loc[pair_id, 'local_absolute_rdata'] = local_absolute_rdata_fn\n",
     "    "
    ]
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "f7f05aa1",
    "metadata": {
     "tags": []
@@ -498,9 +499,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converting ABSOLUTE rdata into tsv files in /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3/rdata_to_tsv\n",
+      "rdata tsv directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3/rdata_to_tsv\n",
+      "cnp figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3/cnp_figs\n",
       "Reloading cnp figs\n",
+      "mut figs directory already exists: /Users/cchu/Desktop/Methods/JupyterReviewer/data/Purity_Reviewer_Tutorial_3/mut_figs\n",
       "Reloading mut figs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning:\n",
+      "\n",
+      "Loading existing data pkl file\n",
+      "\n"
      ]
     }
    ],
@@ -529,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "e326100d-5333-45c4-9cbb-2f9ebf6c4412",
    "metadata": {},
    "outputs": [
@@ -547,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "e5673056-8549-46fe-93dc-e9057bc74aa2",
    "metadata": {},
    "outputs": [
@@ -635,7 +648,7 @@
        "RP-2080_PCYC_CH1_T_01_v2_Exome_OnPrem_pair      NaN     NaN       nan   nan"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
