getter methods for data attributes directly from reviewer

--- a/example_notebooks/Developer_Jupyter_Reviewer_Tutorial.ipynb
+++ b/example_notebooks/Developer_Jupyter_Reviewer_Tutorial.ipynb
@@ -127,7 +127,7 @@
     "                 history_df: pd.DataFrame = None,\n",
     "                 index: List = None,\n",
     "                 df: pd.DataFrame\n",
-    "                 ) -> ReviewData:\n",
+    "                 ) -> Data:\n",
     "        \n",
     "        # Preprocessing\n",
     "\n",
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9d7950db",
    "metadata": {},
    "outputs": [],
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "id": "26e67cc8-d01a-4f10-9225-4c2c76ef8fb6",
    "metadata": {},
    "outputs": [],
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "id": "61659d39-c3e7-4c49-86bc-b69def417359",
    "metadata": {},
    "outputs": [
@@ -770,7 +770,7 @@
        "sample_4   ./example_data/Jupyter_Reviewer_Tutorial/mut_v...  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,26 +783,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 7,
    "id": "98765e54-9136-44cb-bd74-a1682dade013",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewData.py:38: UserWarning:\n",
-      "\n",
-      "Loading existing data pkl file\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dash app running on http://0.0.0.0:8085/\n",
-      "plot_interactive_graph: testing param kwargs\n"
+      "Dash app running on http://0.0.0.0:8085/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning: Loading existing data pkl file\n",
+      "  warnings.warn(f\"Loading existing data pkl file\")\n"
      ]
     }
    ],
@@ -820,7 +817,7 @@
     "\n",
     "# User customization\n",
     "test_reviewer.app.add_component(AppComponent('Test Add Component', html.Div(html.P('New component'))))\n",
-    "test_reviewer.review_data.add_annotation('another_annotation', DataAnnotation('float'))\n",
+    "test_reviewer.review_data_interface.add_annotation('another_annotation', DataAnnotation('float'))\n",
     "test_reviewer.add_review_data_annotations_app_display('another_annotation', 'number')\n",
     "\n",
     "# Run\n",
