option to traverse data with a table

--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -48,19 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "a9657940",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "ef37cc47",
    "metadata": {},
    "outputs": [],
@@ -168,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "fdeffded",
    "metadata": {},
    "outputs": [],
@@ -188,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "8933f1a7",
    "metadata": {},
    "outputs": [],
@@ -228,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "829afcf7",
    "metadata": {},
    "outputs": [
@@ -339,7 +330,7 @@
        "sample_4   ./example_data/Jupyter_Reviewer_Tutorial/mut_v...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "ae59c4c8",
    "metadata": {},
    "outputs": [
@@ -446,7 +437,7 @@
        "4  gene_4  0.058704  sample_0  149            8          141"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "b02b5fef",
    "metadata": {},
    "outputs": [
@@ -466,10 +457,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning:\n",
-      "\n",
-      "Loading existing data pkl file\n",
-      "\n"
+      "/Users/cchu/Desktop/Methods/JupyterReviewer/JupyterReviewer/ReviewDataInterface.py:38: UserWarning: Loading existing data pkl file\n",
+      "  warnings.warn(f\"Loading existing data pkl file\")\n"
      ]
     }
    ],
@@ -501,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "32ab23ca-c27d-4c0d-9149-08c24b244d26",
    "metadata": {},
    "outputs": [
@@ -511,7 +500,7 @@
        "dict_keys(['index', 'description', 'annot_col_config_dict', 'annot_df', 'history_df', 'df'])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "161965c4",
    "metadata": {},
    "outputs": [
@@ -634,7 +623,7 @@
        "4  ./example_data/Jupyter_Reviewer_Tutorial/mut_v...   New data  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "cdc0779a",
    "metadata": {},
    "outputs": [],
@@ -678,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "2875d634",
    "metadata": {},
    "outputs": [],
@@ -689,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "id": "6f611126-58d6-48b7-a056-01737bc2b263",
    "metadata": {},
    "outputs": [
@@ -757,7 +746,7 @@
        "4                  nan     NaN"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "b00fd0cf",
    "metadata": {},
    "outputs": [
@@ -794,6 +783,32 @@
    ],
    "source": [
     "my_reviewer.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33f385c2-4f11-4a2a-88e3-2e90d8aaae73",
+   "metadata": {},
+   "source": [
+    "Pass in a dataframe with the index that matches the index from the Data object to also traverse your data through a table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "b7630df3-40b5-4e8a-9638-cdf4cd59022b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash app running on http://0.0.0.0:8050/\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_reviewer.run(review_data_table_df=df[['gender', 'age', 'tissue_origin']].reset_index(), review_data_table_page_size=7)"
    ]
   },
   {
