remove index dependency if no review data table is specified

--- a/example_notebooks/Intro_to_Reviewers.ipynb
+++ b/example_notebooks/Intro_to_Reviewers.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "fdeffded",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "8933f1a7",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "829afcf7",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "sample_4   ./example_data/Jupyter_Reviewer_Tutorial/mut_v...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "ae59c4c8",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "4  gene_4  0.058704  sample_0  149            8          141"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "b02b5fef",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "32ab23ca-c27d-4c0d-9149-08c24b244d26",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
        "dict_keys(['index', 'description', 'annot_col_config_dict', 'annot_df', 'history_df', 'df'])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "161965c4",
    "metadata": {},
    "outputs": [
@@ -623,7 +623,7 @@
        "4  ./example_data/Jupyter_Reviewer_Tutorial/mut_v...   New data  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "cdc0779a",
    "metadata": {},
    "outputs": [],
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "2875d634",
    "metadata": {},
    "outputs": [],
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "6f611126-58d6-48b7-a056-01737bc2b263",
    "metadata": {},
    "outputs": [
@@ -730,8 +730,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>nan</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Testing</td>\n",
+       "      <td>Remove</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -743,10 +743,10 @@
        "1      Something fishy  Remove\n",
        "2  Missing driver gene  Remove\n",
        "3           Looks good    Keep\n",
-       "4                  nan     NaN"
+       "4              Testing  Remove"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "b00fd0cf",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "id": "b7630df3-40b5-4e8a-9638-cdf4cd59022b",
    "metadata": {},
    "outputs": [
